--- a/index.html
+++ b/index.html
@@ -1,15 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tabs Project</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css">
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <section class="container">
+      <h2 class="title">About</h2>
+      <p class="description">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam!
+      </p>
+      <div class="wrapper">
+        <div class="frame"></div>
+        <!-- frame ends here -->
+        <div class="tabs-container">
+          <div class="tabs-options-wrapper">
+            <div class="option-container"><p class="option">History</p></div>
+            <div class="option-container"><p class="option">Vision</p></div>
+            <div class="option-container"><p class="option">Goals</p></div>
+          </div>
+          <!-- tabs options wrapper ends here -->
+          <div class="tab-details-container">
+            <h4 class="active-title">History</h4>
+            <p class="active-description">
+              I'm baby wolf pickled schlitz try-hard normcore marfa man bun
+              mumblecore vice pop-up XOXO lomo kombucha glossier bicycle rights.
+              Umami kinfolk salvia jean shorts offal venmo. Knausgaard tilde
+              try-hard, woke fixie banjo man bun. Small batch tumeric mustache
+              tbh wayfarers 8-bit shaman chartreuse tacos. Viral direct trade
+              hoodie ugh chambray, craft beer pork belly flannel tacos
+              single-origin coffee art party migas plaid pop-up.
+            </p>
+          </div>
+          <!-- tabs details container ends here -->
+        </div>
+        <!-- tabs container ends here -->
+      </div>
+      <!-- wrapper ends here -->
+    </section>
+    <!-- container ends here -->
+  </body>
 </html>
