--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam!
       </p>
       <div class="wrapper">
-        <div class="frame"></div>
+        <div class="frame">
+            <img src="https://vannilla-js-basic-project-11-tabs.netlify.app/hero-bcg.jpeg" alt="tab-image">
+        </div>
         <!-- frame ends here -->
         <div class="tabs-container">
           <div class="tabs-options-wrapper">
