active tab css done

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- frame ends here -->
         <div class="tabs-container">
           <div class="tabs-options-wrapper">
-            <div class="option-container"><p class="option">History</p></div>
+            <div class="option-container active"><p class="option">History</p></div>
             <div class="option-container"><p class="option">Vision</p></div>
             <div class="option-container"><p class="option">Goals</p></div>
           </div>
