js functionality is done

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </p>
       <div class="wrapper">
         <div class="frame">
-            <img src="https://vannilla-js-basic-project-11-tabs.netlify.app/hero-bcg.jpeg" alt="tab-image">
+            <img src="images/image1.jpeg" alt="tab-image">
         </div>
         <!-- frame ends here -->
         <div class="tabs-container">
